--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
+    "react-responsive": "^9.0.2",
     "sass": "^1.66.1",
     "typescript": "5.2.2"
   }
