--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "next": "13.4.19",
     "react": "18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
@@ -29,6 +30,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.198"
+    "@types/lodash": "^4.14.198",
+    "@types/react-avatar-editor": "^13.0.0"
   }
 }
