--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "axios": "^1.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "jodit-react": "^1.3.39",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.3.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
     "sass": "^1.66.1",
