--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
+    "react-toastify": "^9.1.3",
     "sass": "^1.66.1",
     "typescript": "5.2.2"
   },
